Contact page created

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -17,6 +17,7 @@
 	transform-style: preserve-3d;
 	transform-origin: 100px 100px 0;
 	margin-left: calc(50% - 100px);
+	margin-top: calc(50% - 100px);
 
 	div {
 		position: absolute;
