--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -72,6 +72,7 @@ h2 {
 	float: left;
 	animation: fadeIn 1s 1.8s backwards;
 	white-space: nowrap;
+	border-radius: 4px;
 
 	&:hover {
 		background: #ffd700;
