problems with the routhes solved

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -92,11 +92,12 @@
 			}
 		}
 
-		a.active {
-			svg {
-				color: #ffd700;
-			}
-		}
+		// se repite el amarillo del home aunque se este en otro lugar
+		// a.active {
+		// 	svg {
+		// 		color: #ffd700;
+		// 	}
+		// }
 	}
 
 	ul {
