Original state of the routhes and hover on the side bar, but now using Hash Rother

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -92,12 +92,11 @@
 			}
 		}
 
-		// se repite el amarillo del home aunque se este en otro lugar
-		// a.active {
-		// 	svg {
-		// 		color: #ffd700;
-		// 	}
-		// }
+		a.active {
+			svg {
+				color: #ffd700;
+			}
+		}
 	}
 
 	ul {
