--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -100,3 +100,12 @@
 		color: #333;
 	}
 }
+
+@media screen and (max-width: 1200px) {
+	.stage-cube-cont {
+		position: initial;
+		width: 100%;
+		height: 0%;
+		overflow: visible;
+	}
+}
