--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -121,3 +121,16 @@
 	animation-fill-mode: forwards;
   border-radius: 4px;
 }
+
+@media screen and (max-width: 1200px) {
+  .map-wrap {
+    float: none;
+    width: 100%;
+    height: 400px;
+    margin: 0;
+  }
+
+  .info-map {
+    display: none;
+  }
+}
