--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -79,3 +79,48 @@ h2 {
 		color: #333;
 	}
 }
+
+@media screen and (max-width: 1200px) {
+	.tags,
+	.home-page h1::before,
+	.home-page h1::after {
+		display: none;
+	}
+
+	.home-page {
+		.text-zone {
+			position: initial;
+			width: 100%;
+			transform: none;
+			padding: 10px;
+			box-sizing: border-box;
+		}
+
+		.flat-buttom {
+			float: none;
+			display: block;
+			margin: 20px auto 0 auto;
+			width: 125px
+		}
+
+		.logo-container {
+			position: relative;
+			width: 150px;
+			height: auto;
+			top: 50px;
+			right: 0;
+			box-sizing: border-box;
+			margin: auto;
+			left: 0;
+
+			svg {
+				position: absolute;
+				top: auto;
+				right: auto;
+				bottom: auto;
+				left: 0;
+				margin: auto;
+			}
+		}
+	}
+}
