--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -114,3 +114,28 @@
 		}
 	}
 }
+
+@media screen and (max-width: 1200px) {
+	.page {
+		position: initial;
+	}
+
+	.container {
+		position: initial;
+		height: auto;
+		min-height: auto;
+
+		&.about-page,
+		&.contact-page {
+
+			.text-zone {
+				position: initial;
+				transform: none;
+				width: 100%;
+				display: block;
+				padding: 20px;
+				box-sizing: border-box;
+			}
+		}
+	}
+}
