button CV updated

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -87,6 +87,7 @@
 	font-family: sans-serif;
 	text-decoration: none;
 	padding: 10px 18px;
+	margin-top: 25px;
 	border: 1px solid #ffd700;
 	border-radius: 4px;
 	background: 0 0;
