Projects page added v1

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -85,6 +85,12 @@
 				content: 'ABOUT';
 			}
 		}
+
+		a.projects-link {
+			&:after {
+				content: 'PROJECTS'
+			}
+		}
 		
 		a.contact-link {
 			&:after {
